# idt-labs

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.distroless  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
k8s/base/: db-deployment.yaml  kustomization.yaml  todo-ingress.yaml  todo-service.yaml
k8s/helm/todo-app/: Chart.yaml  README.md  secret-dev.example.yaml  secret-prod.example.yaml  values-dev.yaml  values-prod.yaml  values.yaml
k8s/helm/todo-app/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  db-deployment.yaml  db-pvc.yaml  db-service.yaml  ingress.yaml  secret.yaml  todo-deployment.yaml  todo-service.yaml
k8s/kustomization/base/: configmap.yaml  db-service.yaml  kustomization.yaml  todo-deployment.yaml  todo-ingress.yaml  todo-service.yaml
k8s/overlays/dev/: kustomization.yaml  secret.yaml
k8s/overlays/prod/: secret.example.yaml
lab7-docs/: README.md
src/: config.py  main.py  todo.py
src/api/: health.py  todo.py
src/database/: database_manager.py  models.py
src/observability/: __init__.py  context.py  logging.py  metrics.py  middleware.py  sentry.py  tracing.py
static/: index.html  script.js  style.css
tests/: conftest.py  test_crud.py  test_health.py  test_main.py  test_models.py  test_schemas.py  test_todos.py
todo-infra/: README.md
todo-infra/k8s/helm/postgres-infra/: Chart.yaml  secret-dev.example.yaml  values.yaml  (+2 more)
todo-observability/: docker-compose.yml
todo-observability/compose/prometheus/: alerts.yml  prometheus.yml
(+11 files in other folders)
