[project]
name = "labs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.coverage.report]
show_missing = true
fail_under = 70